Complete comprehensive content for Chapters 16 and 21
Chapter 16: Subscriptions - Real-time Graphs
- Explains the real-time data problem and why polling is insufficient
- Covers the pub/sub pattern and how subscriptions work
- Details WebSocket protocol and graphql-ws messaging
- Provides complete Java/Spring Boot implementation examples
- Discusses reactive streams, backpressure, and filtering
- Shows how to scale subscriptions with Redis/Kafka
- Includes connection management, testing, and common patterns
- Covers performance considerations and security
- Compares subscriptions to alternatives like SSE

Chapter 21: Production Considerations
- Comprehensive monitoring and observability guidance
- Logging best practices with PII handling and correlation IDs
- Performance tuning for JVM, connection pools, and caching
- Schema management including versioning and breaking changes
- Deployment strategies: blue-green, canary, feature flags
- Security hardening with HTTPS, headers, rate limiting
- Disaster recovery including health checks and circuit breakers
- Documentation approaches and cost analysis
- Team organization and on-call procedures
- Complete production readiness checklist

Both chapters follow the book's first-principles approach with practical
Java examples and real-world guidance for production systems.